--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Pagina de prueba</h1>
-    <a href="view/Login.html">Login</a>
+    <a href="view/index.html">Login</a>
     <div id="test">
 
     </div>
